{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 1321,
  "lineage": "f36a7cd3-1dc5-f469-3ec7-6321c7b74ea8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all_worker_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:521801892750:security-group/sg-077a572aed4cd21a7",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-077a572aed4cd21a7",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "all_worker_management20211020072513393700000008",
            "name_prefix": "all_worker_management",
            "owner_id": "521801892750",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e4d95acfbcfc15a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:521801892750:security-group/sg-028747f200e803323",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-028747f200e803323",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_one20211020072513391600000007",
            "name_prefix": "worker_group_mgmt_one",
            "owner_id": "521801892750",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e4d95acfbcfc15a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:521801892750:security-group/sg-0d3a3e4643912e9e0",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0d3a3e4643912e9e0",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_two20211020072513390400000006",
            "name_prefix": "worker_group_mgmt_two",
            "owner_id": "521801892750",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e4d95acfbcfc15a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:521801892750:security-group/sg-0d5e6628c5e5e150d",
            "description": "EKS cluster security group.",
            "egress": [],
            "id": "sg-0d5e6628c5e5e150d",
            "ingress": [],
            "name": "rtf-cluster-demo20211020072514006900000009",
            "name_prefix": "rtf-cluster-demo",
            "owner_id": "521801892750",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "development",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "rtf-cluster-demo-eks_cluster_sg"
            },
            "tags_all": {
              "Environment": "development",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "rtf-cluster-demo-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e4d95acfbcfc15a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:521801892750:security-group/sg-03814bdce821362a7",
            "description": "Security group for all nodes in the cluster.",
            "egress": [],
            "id": "sg-03814bdce821362a7",
            "ingress": [],
            "name": "rtf-cluster-demo2021102007251401070000000a",
            "name_prefix": "rtf-cluster-demo",
            "owner_id": "521801892750",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "development",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "rtf-cluster-demo-eks_worker_sg",
              "kubernetes.io/cluster/rtf-cluster-demo": "owned"
            },
            "tags_all": {
              "Environment": "development",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "rtf-cluster-demo-eks_worker_sg",
              "kubernetes.io/cluster/rtf-cluster-demo": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e4d95acfbcfc15a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-3877476421",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0d5e6628c5e5e150d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-698723538",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d5e6628c5e5e150d",
            "self": false,
            "source_security_group_id": "sg-03814bdce821362a7",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-1235856771",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-03814bdce821362a7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-3027936012",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03814bdce821362a7",
            "self": false,
            "source_security_group_id": "sg-0d5e6628c5e5e150d",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-203326763",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03814bdce821362a7",
            "self": false,
            "source_security_group_id": "sg-0d5e6628c5e5e150d",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-3776498929",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-03814bdce821362a7",
            "self": false,
            "source_security_group_id": "sg-03814bdce821362a7",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-00b536a23eccba7b6",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-3-10-122-240.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.10.122.240",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "rtf-cluster-demo-vpc-eu-west-2a",
              "kubernetes.io/cluster/rtf-cluster-demo": "shared"
            },
            "tags_all": {
              "Name": "rtf-cluster-demo-vpc-eu-west-2a",
              "kubernetes.io/cluster/rtf-cluster-demo": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:521801892750:internet-gateway/igw-06b017c5aed2e8c5d",
            "id": "igw-06b017c5aed2e8c5d",
            "owner_id": "521801892750",
            "tags": {
              "Name": "rtf-cluster-demo-vpc",
              "kubernetes.io/cluster/rtf-cluster-demo": "shared"
            },
            "tags_all": {
              "Name": "rtf-cluster-demo-vpc",
              "kubernetes.io/cluster/rtf-cluster-demo": "shared"
            },
            "vpc_id": "vpc-0e4d95acfbcfc15a2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00b536a23eccba7b6",
            "connectivity_type": "public",
            "id": "nat-0af70f4f958f53b09",
            "network_interface_id": "eni-074a326252bbd014a",
            "private_ip": "10.10.7.146",
            "public_ip": "3.10.122.240",
            "subnet_id": "subnet-01f2a837320bbb619",
            "tags": {
              "Name": "rtf-cluster-demo-vpc-eu-west-2a",
              "kubernetes.io/cluster/rtf-cluster-demo": "shared"
            },
            "tags_all": {
              "Name": "rtf-cluster-demo-vpc-eu-west-2a",
              "kubernetes.io/cluster/rtf-cluster-demo": "shared"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04da222439415892a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0af70f4f958f53b09",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04da222439415892a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06b017c5aed2e8c5d",
            "id": "r-rtb-0d58027109a32142f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d58027109a32142f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:521801892750:route-table/rtb-04da222439415892a",
            "id": "rtb-04da222439415892a",
            "owner_id": "521801892750",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "rtf-cluster-demo-vpc-private",
              "kubernetes.io/cluster/rtf-cluster-demo": "shared"
            },
            "tags_all": {
              "Name": "rtf-cluster-demo-vpc-private",
              "kubernetes.io/cluster/rtf-cluster-demo": "shared"
            },
            "vpc_id": "vpc-0e4d95acfbcfc15a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:521801892750:route-table/rtb-0d58027109a32142f",
            "id": "rtb-0d58027109a32142f",
            "owner_id": "521801892750",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "rtf-cluster-demo-vpc-public",
              "kubernetes.io/cluster/rtf-cluster-demo": "shared"
            },
            "tags_all": {
              "Name": "rtf-cluster-demo-vpc-public",
              "kubernetes.io/cluster/rtf-cluster-demo": "shared"
            },
            "vpc_id": "vpc-0e4d95acfbcfc15a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d7d1a1acc36882e6",
            "route_table_id": "rtb-04da222439415892a",
            "subnet_id": "subnet-0cac4e649edfad14a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0276ab9664a197a60",
            "route_table_id": "rtb-04da222439415892a",
            "subnet_id": "subnet-00075bbcfe8e06cf2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033ebae57b755a0c4",
            "route_table_id": "rtb-04da222439415892a",
            "subnet_id": "subnet-0feddab5b28de6ac4"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c24a285cd5ec8334",
            "route_table_id": "rtb-0d58027109a32142f",
            "subnet_id": "subnet-01f2a837320bbb619"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0318d1f6323ff47d6",
            "route_table_id": "rtb-0d58027109a32142f",
            "subnet_id": "subnet-03c689da3e1efee87"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048c5900752af24bd",
            "route_table_id": "rtb-0d58027109a32142f",
            "subnet_id": "subnet-029e55b11080e150d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:521801892750:subnet/subnet-0cac4e649edfad14a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.10.64.0/20",
            "id": "subnet-0cac4e649edfad14a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "521801892750",
            "tags": {
              "Name": "rtf-cluster-demo-vpc-private-eu-west-2a",
              "kubernetes.io/cluster/rtf-cluster-demo": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "rtf-cluster-demo-vpc-private-eu-west-2a",
              "kubernetes.io/cluster/rtf-cluster-demo": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0e4d95acfbcfc15a2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:521801892750:subnet/subnet-00075bbcfe8e06cf2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.10.80.0/20",
            "id": "subnet-00075bbcfe8e06cf2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "521801892750",
            "tags": {
              "Name": "rtf-cluster-demo-vpc-private-eu-west-2b",
              "kubernetes.io/cluster/rtf-cluster-demo": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "rtf-cluster-demo-vpc-private-eu-west-2b",
              "kubernetes.io/cluster/rtf-cluster-demo": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0e4d95acfbcfc15a2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:521801892750:subnet/subnet-0feddab5b28de6ac4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.10.96.0/20",
            "id": "subnet-0feddab5b28de6ac4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "521801892750",
            "tags": {
              "Name": "rtf-cluster-demo-vpc-private-eu-west-2c",
              "kubernetes.io/cluster/rtf-cluster-demo": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "rtf-cluster-demo-vpc-private-eu-west-2c",
              "kubernetes.io/cluster/rtf-cluster-demo": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0e4d95acfbcfc15a2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:521801892750:subnet/subnet-01f2a837320bbb619",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.10.0.0/20",
            "id": "subnet-01f2a837320bbb619",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "521801892750",
            "tags": {
              "Name": "rtf-cluster-demo-vpc-public-eu-west-2a",
              "kubernetes.io/cluster/rtf-cluster-demo": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "rtf-cluster-demo-vpc-public-eu-west-2a",
              "kubernetes.io/cluster/rtf-cluster-demo": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0e4d95acfbcfc15a2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:521801892750:subnet/subnet-03c689da3e1efee87",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.10.16.0/20",
            "id": "subnet-03c689da3e1efee87",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "521801892750",
            "tags": {
              "Name": "rtf-cluster-demo-vpc-public-eu-west-2b",
              "kubernetes.io/cluster/rtf-cluster-demo": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "rtf-cluster-demo-vpc-public-eu-west-2b",
              "kubernetes.io/cluster/rtf-cluster-demo": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0e4d95acfbcfc15a2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:521801892750:subnet/subnet-029e55b11080e150d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.10.32.0/20",
            "id": "subnet-029e55b11080e150d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "521801892750",
            "tags": {
              "Name": "rtf-cluster-demo-vpc-public-eu-west-2c",
              "kubernetes.io/cluster/rtf-cluster-demo": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "rtf-cluster-demo-vpc-public-eu-west-2c",
              "kubernetes.io/cluster/rtf-cluster-demo": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0e4d95acfbcfc15a2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:521801892750:vpc/vpc-0e4d95acfbcfc15a2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0bd0705a897d07ac2",
            "default_route_table_id": "rtb-0d61b01695f7e419c",
            "default_security_group_id": "sg-0b72d8e95dfa52939",
            "dhcp_options_id": "dopt-f5d6f39d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e4d95acfbcfc15a2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d61b01695f7e419c",
            "owner_id": "521801892750",
            "tags": {
              "Name": "rtf-cluster-demo-vpc",
              "kubernetes.io/cluster/rtf-cluster-demo": "shared"
            },
            "tags_all": {
              "Name": "rtf-cluster-demo-vpc",
              "kubernetes.io/cluster/rtf-cluster-demo": "shared"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}